# autokbdlight

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yaml
etc/systemd/: autokbdlight.service
src/: config.rs  input.rs  leds.rs  logger.rs  main.rs
